--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-memos",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "A Flomo Like Plugin For Obsidian Daily Notes",
   "author": "boninall",
   "main": "main.js",
@@ -20,22 +20,27 @@
     "tiny-undo": "^0.0.8"
   },
   "devDependencies": {
+    "@jukben/emoji-search": "^2.0.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/recompose": "^0.30.10",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react": "^1.1.3",
     "babel": "^6.23.0",
+    "chi-time-nlp": "^1.0.4",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "less": "^4.1.2",
-    "vite": "^2.3.8",
     "obsidian": "^0.13.11",
     "obsidian-dataview": "^0.4.21",
     "prettier": "2.5.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "vite": "^2.3.8",
+    "vite-plugin-react-svg": "^0.2.0"
   },
   "license": "MIT"
 }
