Fix tag filter problem, fix editor height css error, add some image to introduce

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-memos",
-  "version": "1.1.8",
-  "description": "A Flomo Like Plugin For Obsidian Daily Notes",
+  "version": "1.1.10",
+  "description": "A Quick Capture Plugin For Obsidian Daily Notes",
   "author": "boninall",
   "main": "main.js",
   "scripts": {
