--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "obsidian-memos",
   "name": "Obsidian Memos",
-  "description": "Memos for Obsidian",
-  "version": "1.1.8",
+  "description": "A quick idea capture plugin for Obsidian",
+  "version": "1.1.10",
   "author": "Bonianll",
   "authorUrl": "https://github.com/Quorafind/",
   "isDesktopOnly": false,
