formatting cleanup to match style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,29 +13,16 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "noEmit": true,
-    "lib": ["dom", "esnext","DOM.Iterable", "scripthost", "es2015"]
+    "lib": [
+      "dom",
+      "esnext",
+      "DOM.Iterable",
+      "scripthost",
+      "es2015"
+    ]
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
-
-
-// {
-//   "compilerOptions": {
-//     "target": "ESNext",
-//     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-//     "types": ["vite/client"],
-//     "allowJs": false,
-//     "skipLibCheck": false,
-//     "esModuleInterop": false,
-//     "allowSyntheticDefaultImports": true,
-//     "strict": true,
-//     "forceConsistentCasingInFileNames": true,
-//     "module": "ESNext",
-//     "moduleResolution": "Node",
-//     "resolveJsonModule": true,
-//     "isolatedModules": true,
-//     "noEmit": true,
-//     "jsx": "react-jsx"
-//   },
-//   "include": ["./src", "./public"]
-// }
