--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-memos",
-  "version": "1.1.10",
+  "version": "1.2.0",
   "description": "A Quick Capture Plugin For Obsidian Daily Notes",
   "author": "boninall",
   "main": "main.js",
@@ -13,6 +13,7 @@
     "test:watch": "yarn test -- --watch"
   },
   "dependencies": {
+    "i18next": "^21.6.6",
     "obsidian": "github:obsidianmd/obsidian-api#master",
     "obsidian-daily-notes-interface": "^0.9.4",
     "react": "^17.0.2",
@@ -24,10 +25,10 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/recompose": "^0.30.10",
-    "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react": "^1.1.3",
+    "@webscopeio/react-textarea-autocomplete": "^4.9.1",
     "babel": "^6.23.0",
     "chi-time-nlp": "^1.0.4",
     "eslint": "^7.22.0",
@@ -35,6 +36,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "less": "^4.1.2",
+    "moment": "2.29.1",
     "obsidian": "^0.13.11",
     "obsidian-dataview": "^0.4.21",
     "prettier": "2.5.1",
