--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,18 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "noEmit": true,
-    "lib": ["dom", "esnext","DOM.Iterable", "scripthost", "es2015"]
+    "lib": [
+      "dom",
+      "esnext",
+      "DOM.Iterable",
+      "scripthost",
+      "es2015"
+    ]
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
 
 
