--- a/package.json
+++ b/package.json
@@ -22,24 +22,30 @@
   },
   "devDependencies": {
     "@jukben/emoji-search": "^2.0.1",
+    "@popperjs/core": "^2.11.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/recompose": "^0.30.10",
+    "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react": "^1.1.3",
     "@webscopeio/react-textarea-autocomplete": "^4.9.1",
     "babel": "^6.23.0",
     "chi-time-nlp": "^1.0.4",
+    "data-fns": "^0.1.8",
+    "date-fns": "^2.28.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
+    "focus-trap-react": "^8.9.1",
     "less": "^4.1.2",
     "moment": "2.29.1",
     "obsidian": "^0.13.11",
     "obsidian-dataview": "^0.4.21",
     "prettier": "2.5.1",
+    "react-day-picker": "^8.0.0-beta.36",
     "typescript": "^4.2.3",
     "vite": "^2.3.8",
     "vite-plugin-react-svg": "^0.2.0"
