--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "id": "obsidian-memos",
   "name": "Obsidian Memos",
-  "description": "A quick idea capture plugin for Obsidian",
-  "version": "1.4.2",
+  "description": "A plugin for capturing ideas in Obsidian",
+  "version": "1.4.3",
   "author": "Bonianll",
   "authorUrl": "https://github.com/Quorafind/",
   "isDesktopOnly": false,
