--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "id": "obsidian-memos",
   "name": "Obsidian Memos",
   "description": "A plugin for capturing ideas in Obsidian",
-  "version": "1.7.12",
-  "author": "Bonianll",
+  "version": "1.7.14",
+  "author": "Boninall",
   "authorUrl": "https://github.com/Quorafind/",
   "isDesktopOnly": false,
   "minAppVersion": "0.13.14"
