--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "@vitejs/plugin-react": "^1.1.3",
+    "@vitejs/plugin-react": "^1.1.4",
     "@webscopeio/react-textarea-autocomplete": "^4.9.1",
     "babel": "^6.23.0",
     "chi-time-nlp": "^1.0.4",
@@ -49,9 +49,10 @@
     "obsidian-dataview": "^0.4.21",
     "prettier": "2.5.1",
     "react-day-picker": "^8.0.0-beta.36",
+    "react-popper": "^2.2.5",
     "react-tabs": "^3.2.3",
     "typescript": "^4.2.3",
-    "vite": "^2.3.8",
+    "vite": "^2.7.13",
     "vite-plugin-react-svg": "^0.2.0"
   },
   "license": "MIT"
