--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-memos",
-  "version": "1.7.14",
+  "version": "1.8.0",
   "description": "A Quick Capture Plugin For Obsidian Daily Notes",
   "author": "boninall",
   "main": "main.js",
@@ -33,7 +33,7 @@
     "@types/webscopeio__react-textarea-autocomplete": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "@vitejs/plugin-react": "^1.1.4",
+    "@vitejs/plugin-react": "^1.1.3",
     "@webscopeio/react-textarea-autocomplete": "^4.9.1",
     "babel": "^6.23.0",
     "chi-time-nlp": "^1.0.4",
@@ -49,10 +49,10 @@
     "obsidian-dataview": "^0.4.21",
     "prettier": "2.5.1",
     "react-day-picker": "^8.0.0-beta.36",
-    "react-popper": "^2.2.5",
     "react-tabs": "^3.2.3",
+    "react-usestateref": "^1.0.8",
     "typescript": "^4.2.3",
-    "vite": "^2.7.13",
+    "vite": "^2.3.8",
     "vite-plugin-react-svg": "^0.2.0"
   },
   "license": "MIT"
