--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-react": "^7.29.2",
     "focus-trap-react": "^8.9.2",
     "less": "^4.1.2",
-    "obsidian-dataview": "^0.4.25",
+    "obsidian-dataview": "0.5.9",
     "prettier": "2.6.0",
     "react-rnd": "^10.3.5",
     "react-usestateref": "^1.0.8",
