--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "obsidian-daily-notes-interface": "^0.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-popper": "^2.3.0",
     "tiny-undo": "^0.0.10"
   },
   "devDependencies": {
