--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "jest",
     "test:watch": "yarn test -- --watch"
   },
+  "resolutions": {
+    "obsidian": "0.16.3"
+  },
   "dependencies": {
     "obsidian": "0.16.3",
     "obsidian-daily-notes-interface": "^0.9.4",
