--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,12 +1,12 @@
-name: Bug Report
-description: File a bug report
+name: Bug Report | BUG 报告
+description: File a bug report | 提交一个 BUG 报告
 title: "[Bug]: "
 labels: [ "bug" ]
 body:
   - type: textarea
     id: bug-description
     attributes:
-      label: Bug Description
+      label: Bug Description | BUG 描述
       description: A clear and concise description of the bug. 一个清晰而简洁的错误描述。
     validations:
       required: true
@@ -18,7 +18,7 @@ body:
   - type: textarea
     id: reproduction-steps
     attributes:
-      label: To Reproduce
+      label: To Reproduce | 重现问题
       description: Steps to reproduce the problem (if applicable). 重现问题的步骤（如果适用）。
       placeholder: |
         For example:
@@ -28,7 +28,7 @@ body:
   - type: input
     id: obsi-version
     attributes:
-      label: Obsidian Version (if applicable)
+      label: Obsidian Version | Obsidian 版本
       description: You can find the version in the *About* Tab of the settings. 你可以在设置的*关于*选项卡中找到版本。
       placeholder: 0.13.19
     validations:
@@ -38,8 +38,8 @@ body:
     attributes:
       label: Which editor are you using? (If applicable)
       options:
-        - label: New Editor (WYSIWYG) 新编辑器（所见即所得）
-        - label: Legacy Editor (Markdown) 旧编辑器（Markdown）
+        - label: New Editor (WYSIWYG) | 新编辑器
+        - label: Legacy Editor (Markdown) | 旧编辑器
   - type: checkboxes
     id: checklist
     attributes:
