chore: release obsidian plugin v2.3.10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thino",
-  "version": "2.3.10-24",
+  "version": "2.3.10",
   "scripts": {
     "release": "dotenv release-it --"
   },
