--- a/manifest-beta.json
+++ b/manifest-beta.json
@@ -2,7 +2,7 @@
   "id": "obsidian-memos",
   "name": "Thino",
   "description": "Capturing ideas and save them into daily notes.",
-  "version": "2.3.13-beta.0",
+  "version": "2.3.12",
   "author": "Boninall",
   "authorUrl": "https://github.com/Quorafind/",
   "isDesktopOnly": false,
