--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thino",
-  "version": "2.3.23",
+  "version": "2.3.24-0",
   "scripts": {
     "release": "dotenv release-it --"
   },
