chore: release obsidian plugin v2.4.14-0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thino",
-  "version": "2.4.13",
+  "version": "2.4.14-0",
   "scripts": {
     "release": "dotenv release-it --"
   },
