--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thino",
-  "version": "2.4.16-3",
+  "version": "2.4.16",
   "scripts": {
     "release": "dotenv release-it --"
   },
