--- a/manifest-beta.json
+++ b/manifest-beta.json
@@ -1,7 +1,7 @@
 {
   "id": "obsidian-memos",
   "name": "Thino",
-  "description": "Capturing ideas and save them into daily notes.",
+  "description": "Capturing ideas and save them into daily notes. (Closed source)",
   "version": "2.4.33",
   "author": "Boninall",
   "authorUrl": "https://github.com/Quorafind/",
